k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-budget
  labels:
    name: simple-budget
    pod-security.kubernetes.io/enforce: restricted
