k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-budget
  namespace: simple-budget
  labels:
    app: simple-budget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-budget
  template:
    metadata:
      labels:
        app: simple-budget
        version: "1740917223"
    spec:
      containers:
      - name: simple-budget
        image: ghcr.io/corybuecker/simple-budget:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
        resources:
          limits:
            memory: 512M
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
