k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  selector:
    app: simple-budget
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
