k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - budget.corybuecker.com
  rules:
    - backendRefs:
      - name: simple-budget
        namespace: simple-budget
        port: 8000
