k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  routes:
    - kind: Rule
      match: Host(`budget.corybuecker.com`)
      services:
        - kind: Service
          name: simple-budget
          namespace: simple-budget
          passHostHeader: true
          port: http
