k8s/ingress_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simple-budget
  namespace: simple-budget
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`HOST`)
      services:
        - kind: Service
          name: simple-budget
          namespace: simple-budget
          passHostHeader: true
          port: http
